<resources>
    <string name="app_name">Calculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing Service!</string>
    <string name="ok_service">Ok Service</string>
    <string name="good_service">Good Service!</string>
    <string name="roundup_tip">roundup tip!</string>
    <string name="calculate">Calculate!</string>
    <string name="tip_amount">tip amount : %s</string>
</resources>